# strlen

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .tool-versions  CMakeLists.txt  Pipfile  README.adoc
.github/workflows/: style.yml  ubuntu.yml
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  strlen.c  strlen.h  strlen.test.cpp
